--- a/aio/http/server/aio.conf
+++ b/aio/http/server/aio.conf
@@ -1,18 +1,19 @@
 
 [aio/http]
 log_level = ${aio:log_level}
+log_handlers = ${aio:log_handlers}
 request_log_level = ${aio:log_level}
+request_log_handlers = ${aio:log_handlers}
 
 [logger_http]
 level=${aio/http:log_level}
-handlers=consoleHandler
+handlers=${aio/http:log_handlers}
 qualname=aio.http
 propagate=0
 
 
 [logger_http_request]
 level=${aio/http:request_log_level}
-handlers=consoleHandler
+handlers=${aio/http:request_log_handlers}
 qualname=aio.http.request
 propagate=0
-
